# Snippet-Fake-Sales-Data-As-Dashboard-Material

./: .env.template  .gitignore  Cargo.toml  DDL.sql
src/: data_generator.rs  database_manager.rs  main.rs
