[package]
name = "fake-sales-data-as-dashboard-material"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = " 0.4.41", features = ["serde"] }
rand = "0.9.2"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = "1.18.0"
dotenv = "0.15.0"
